--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,7 +29,7 @@
                                 <a href="/logout"><span class="desktop">Déconnexion</span><i class="mobile fa-solid fa-right-from-bracket"></i></a>
                             {% else %}
                                 <a href="/register"><span class="desktop">S'inscrire</span><i class="mobile fa-solid fa-address-card"></i></a>
-                                <a href="/login"><span class="desktop">Connexion</span><i class="mobile fa-solid fa-right-to-bracket"></i></a>
+                                <a href="/app_login"><span class="desktop">Connexion</span><i class="mobile fa-solid fa-right-to-bracket"></i></a>
                             {% endif %}
                         </nav>
                     </div>
