--- a/templates/game/home.html.twig
+++ b/templates/game/home.html.twig
@@ -20,10 +20,8 @@
         <div class="itemCard" data-link="/game/details/{{game.id}}">
             <figure>
                 <img src={{game.image}} alt={{game.title}}>
-                <figcaption>
-                    <p class="title">{{game.title}}</p>
-                </figcaption>
             </figure>
+             <p class="title banner">{{game.title}}</p>
         </div>
         {% endfor %}
     </section>
