--- a/templates/home/contact.html.twig
+++ b/templates/home/contact.html.twig
@@ -34,7 +34,7 @@
         <label for="message">Message : </label>
     <div class="form center">
         <textarea type="text" name="message" id="message" rows="10" placeholder="Ecrivez votre message ici"></textarea>
-        <input class="btn contact" type="submit" value="Envoyer le message">
+        <input class="btn main" type="submit" value="Envoyer le message">
     </div>
 </form>
 
