--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,32 @@
-*{
-    box-sizing: border-box;
-}
+/*  SOMMAIRE
+=========================================
+    Mise en place de la palette de couleur initiale
+=========================================
+    Définiton des bases (wrappers, apparence des listes, ...)
+=========================================
+    Header / Menu
+=========================================
+    Page d'accueil
+=========================================
+    Affichage des cards de jeux ou pièces
+=========================================
+    Spécifique au pages de détail des jeux
+=========================================
+    Page de détail Utilisateur
+=========================================
+    Specifique aux formulaires
+=========================================
+    Recherche
+=========================================
+    Footer
+=========================================
+    Média query pour l'adaptation aux supports
+=========================================
+*/
 
-
-/*Mise en place de la palette de couleur initiale*/
+/*=========================================
+    Mise en place de la palette de couleur initiale
+=========================================*/
 :root{
     --main-xxclear: rgb(217, 244, 252);
     --main-xclear: rgb(76,201,240);
@@ -12,6 +35,12 @@
     --main-dark: rgb(63,55,201);
     --main-xdark: rgb(58,12,163); 
     --main-xxdark: rgb(20, 4, 58);
+}
+/*=========================================
+    Définiton des bases (wrappers, apparence des listes, ...)
+=========================================*/
+*{
+    box-sizing: border-box;
 }
 body{
     margin: 0;
@@ -45,7 +74,6 @@ ul{
 li:before{
     content: "> ";
 }
-/*Affichage responsive*/
 i.mobile{
     display: none;
 }
@@ -86,12 +114,7 @@ header{
 /*=========================================
     Page d'accueil
 =========================================*/
-.homeChoice{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.homeChoice + h1{
+.homeLogo + h1{
     font-size: 3em;
     margin: 0.3em;
 }
@@ -99,21 +122,76 @@ p.banner{
     width: 80%;
     margin: auto;
 }
-.homeChoice img{
+.homeLogo{
+    text-align: center;
+}
+.homeLogo img{
     height: 150px;
 }
-.homeChoice a{
+.homePannel.box{
+    width: 70%;
+    min-height: 200px;
+    margin: auto
+}
+.homePannel{
+    display: flex;
+    align-items: stretch;
+    justify-content: center;   
+    width: 100%;
+    border-top: 1px solid var(--main-xxdark);
+    border-bottom: 1px solid var(--main-xxdark);
+    border-right: 1px solid var(--main-xxdark);
+    background-color: var(--main-xxclear);
+    border-radius: 10px 0 0 10px;
+    overflow: hidden;
+}
+.homePannel i{
+    font-size: 3em;
+}
+.homePannel a{
     display: inline-block;
+    font-size: 1.3em;
     margin: 0.5em;
+    color: var(--main-xxdark);
 }
-.homeChoice a:before{
-    content: "~ "
+.homeChoice{
+    position: relative;
+    width: 70px;
+    padding: 0 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-left: 2px solid var(--main-xxdark);
+    border-radius: 10px 0 0 10px;
+    background-color: var(--main-xxclear);
+    color: var(--main-xxdark);
+    transition: width 0.4s, background-color 0.6s;
+    z-index: 1;
 }
-.homeChoice a:after{
-    content: " ~"
+.homeChoice i{
+    margin: 5px;
+}
+.link{
+    display: none;
+}
+.link.visible{
+    display: inline;
+}
+.homeChoice.active{
+    background-color: var(--main-xclear);
+    width: 75%;
+}
+.homeChoice.active::after{
+    content: "";
+    height: 100%;
+    background-color: var(--main-xclear);
+    z-index: 0;
+    position: absolute;
+    width: 10px;
+    right: -10px;
 }
 /*=========================================
-    Affichage des cards de jeux ou pièces
+    Affichage des cards de jeux
 =========================================*/
 .gallery{
     width: 100%;
@@ -124,7 +202,7 @@ p.banner{
 .itemCard{
     border: 1px solid var(--main-dark);
     border-radius: 5px;
-    padding-bottom: 2.5em;
+    padding-bottom: 0.5em;
 }
 .itemCard:hover{
     cursor: pointer;
@@ -165,11 +243,14 @@ figure figcaption{
     align-items: center;
     justify-content: space-evenly;
 }
+.flex1{
+    flex: 1;
+}
 .gameInfos{
     display: flex;
     flex-direction: row;
     align-items: stretch;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 .miniature{
     margin: 0 1em;
@@ -197,7 +278,7 @@ figure figcaption{
     margin: 0 1em;
     width: 250px;
 }
-.piece{
+.pieceDescription{
     position: relative;
 }
 .imgHover{
@@ -216,7 +297,7 @@ figure figcaption{
     width: 100%;
     object-fit: cover;
 }
-.piece:hover .imgHover{
+.pieceDescription:hover .imgHover{
     visibility: visible;
 }
 .gamePeople{
@@ -273,20 +354,17 @@ p.commentText{
 /*=========================================
     Page de détail Utilisateur
 =========================================*/
-#infoBtn{
-    width: 175px;
-}
 .userCollection{
     position: relative;
 }
 .userCollection .tip{
     position: absolute;
     background-color: var(--main-clear);
-    color: var(--main-dark);
+    color: var(--main-xxdark);
     border-radius: 5px;
     text-align: center;
     padding: 5px;
-    left: 100px;
+    right: 0px;
     top: 15px;
     width: fit-content;
     visibility: hidden;
@@ -321,8 +399,11 @@ p.commentText{
     align-items: center;
 }
 .form.w5050{
-    grid-template-columns: 150px 1fr;
+    grid-template-columns: 160px 1fr;
     text-align: right;
+}
+.w5050 label{
+    margin: 0 1em;
 }
 .form.center{
     display: flex;
@@ -363,12 +444,12 @@ label.required::after{
 }
 .userInfos.active{
     visibility: visible;
-    height: 630px;
+    height: 500px;
     opacity: 1;
 }
 #commentForm.active{
     visibility: visible;
-    height: 330px;
+    height: 300px;
     opacity: 1;
 }
 .range{
@@ -389,12 +470,13 @@ label.required::after{
     border: 1px solid var(--main-xclear);
     border-style: outset;
     margin: 1em;
+    min-width: 175px;
 }
 .right{
     display: flex;
     justify-content: flex-end;
 }
-.btn.contact{
+.btn.main{
     width: 40%;
     background-color: var(--main-clear);
     color: var(--main-xxdark);
@@ -417,7 +499,7 @@ label.required::after{
     flex: 1;
 }
 /*=========================================
-    Recherche
+    Recherche et résultats
 =========================================*/
 .multiform{
     display: flex;
@@ -427,6 +509,30 @@ label.required::after{
 }
 .multiform input, .multiform select, .multiform textarea{
     margin: 0.5em 1em 0.5em 0;
+}
+.pieceResults{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.itemCard.piece{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.pieceImg{
+    margin: 0;
+
+}/*tableau des informations sur les pièces*/
+.pieceDetail{
+    margin: 0;
+    margin: 0 auto;
+}
+.pieceDetail .title{
+    margin: 0 auto;
+}
+.pieceDetail td{
+    align-self: baseline;
 }
 /*=========================================
     Footer
@@ -459,8 +565,8 @@ footer p{
     .gallery{
         grid-template-columns: repeat(3, 1fr);
     }
-    .gameContent{
-        /*flex-direction: column;*/
+    .multiform{
+        flex-wrap: wrap;
     }
 }
 @media only screen and (max-width: 650px) {
@@ -469,15 +575,27 @@ footer p{
     }
     i.mobile{
         display: initial;
+        font-size: 1.5em;
     }
     .gameDetail{
         flex-wrap: wrap;
+    }
+    .gameInfos>div{
+        margin: 0 1em;
     }
     .gamePeople{
         gap: 2em;
     }
 }
 @media only screen and (max-width: 550px) {
+    .headerMenu{
+        flex: 1;
+        justify-content: space-evenly;
+    }
+    .headerMenu a{
+        margin: 0;
+        font-size: 1.5em;
+    }
     .gallery{
         grid-template-columns: repeat(2, 1fr);
     }
@@ -491,10 +609,30 @@ footer p{
     p.commentText{
         margin: 0.5em ;
     }
+    .form.align{
+        display: flex;
+        flex-direction: column;
+    }
+    input:not(.btn, [type="checkbox"]), select, textarea{
+        width: 80%;
+    }
+    .userInfos .form.align{
+        display: grid;
+        grid-template-columns: 20% 1fr;
+        align-items: center;
+    }
+    .userInfos input, .userInfos textarea{
+        width: 100%;
+    }
+    
 }
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 430px) {
     .itemCard figure{
         width: 50%;
+    }
+    .itemCard.piece{
+        display: flex;
+        align-items: center;
     }
     footer div p{
         display: none;
@@ -502,6 +640,9 @@ footer p{
     .gameInfos{
         flex-wrap: wrap-reverse;
         justify-content: center;
+    }
+    .gallery.piece{
+        display: block;
     }
     
 }
