--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,9 +26,9 @@
                             <a href="/search"><span class="desktop">Rechercher</span><i class="mobile fa-solid fa-magnifying-glass"></i></a>
                             {% if app.user %}
                                 <a href="/user/details/{{app.user.id}}"><span class="desktop">Mon Profil</span><i class="mobile fa-solid fa-id-card-clip"></i></a>
-                                <a href="/logout"><span class="desktop">Déconnexion</span><i class="mobile fa-solid fa-right-from-bracket"></i></a>
+                                <a href="/app_logout"><span class="desktop">Déconnexion</span><i class="mobile fa-solid fa-right-from-bracket"></i></a>
                             {% else %}
-                                <a href="/register"><span class="desktop">S'inscrire</span><i class="mobile fa-solid fa-address-card"></i></a>
+                                <a href="/app_register"><span class="desktop">S'inscrire</span><i class="mobile fa-solid fa-address-card"></i></a>
                                 <a href="/app_login"><span class="desktop">Connexion</span><i class="mobile fa-solid fa-right-to-bracket"></i></a>
                             {% endif %}
                         </nav>
