--- a/templates/game/details.html.twig
+++ b/templates/game/details.html.twig
@@ -41,9 +41,11 @@
             addComment.addEventListener("click", ()=>{
                 commentForm.classList.toggle("active")
                 if( addComment.innerText == "Ajouter une évaluation" ){
+                    addComment.classList.remove("main")
                     addComment.innerText = "Annuler"
                 }else{
                     addComment.innerText = "Ajouter une évaluation"
+                    addComment.classList.add("main")
                 }
             })
         </script>
@@ -59,7 +61,7 @@
         <div class="miniature">
             <img src={{game.image}} alt="photo de {{game.title}}">
         </div>
-        <div>
+        <div class="flex1">
             <div class="gameInfos">
                 <div>
                     <p>Catégorie{% if game.categories is iterable %}s{% endif %} : 
@@ -169,7 +171,7 @@
     <div class="contentList">
         <ul>
             {% for content in game.gameContents|filter(c => c.componentType.type == "dé") %}   
-                <li class="piece">
+                <li class="pieceDescription">
                     <span class="imgHover">
                         <img src="{{asset(content.picture)}}" alt={{content.componentType}}>
                     </span>
@@ -302,7 +304,7 @@
     </div>
     {% if app.user %}
         <div class="form center">
-            <button class="btn" id="addComment">Ajouter une évaluation</button>
+            <button class="btn main" id="addComment">Ajouter une évaluation</button>
         </div>
         <div id="commentForm">
             {{ form_start(commentForm) }}
@@ -319,7 +321,7 @@
                 {{form_label(commentForm.feedback, "Commentaire")}}
                 <div class="form center">
                     {{form_widget(commentForm.feedback, [])}}
-                    <button type="submit" class="btn contact">Envoyer</button>
+                    <button type="submit" class="btn main">Envoyer</button>
                 </div>
             </div>
             {{form_widget(commentForm.date, {"value" : "now"|date("Y-m-d\\TH:i:s") } ) }}
