--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -35,7 +35,7 @@
                 {{ form_label(registrationForm.agreeTerms, "J'accepte les Conditions Générales d'Utilisation") }}
                 {{ form_widget(registrationForm.agreeTerms) }}
             </p>
-            <button type="submit" class="btn contact">S'inscrire</button>
+            <button type="submit" class="btn main">S'inscrire</button>
             </div>
         </div>
         {{ form_rest(registrationForm) }}
