--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -61,6 +61,34 @@
 
 <div class="multiform">
     
+    <form action="/searchGame" method="POST" class="form contact" id="searchGame">
+        <h3 class="banner">Rechercher un jeu</h3>
+        <div class="form align w5050">
+            <label for="gameName">Nom</label>
+            <input type="text" name="gameName" id="gameName">
+            <label for="category">Catégorie</label>
+            <select name="category" id="category">
+                <option disabled selected hidden>--- Choisir ---</option>
+                {% for cat in categories %}
+                    <option value="{{cat.id}}">{{cat.name|capitalize}}</option>
+                {% endfor %}
+            </select>
+            <label for="author">Auteur</label>
+            <select name="author" id="author">
+                <option disabled selected hidden>--- Choisir ---</option>
+                {% for author in authors %}
+                    <option value="{{author.id}}">{{author}}</option>
+                {% endfor %}
+            </select>
+            <label for="players">Nombre de joueurs</label>
+            <input type="number" min="0" max="16" name="players" id="players"></input>
+            
+        </div>
+        <div class="form center">
+            <input class="btn main" type="submit" value="Rechercher">
+        </div>
+    </form>
+
     <form action="/searchPiece" method="POST" class="form contact">
         <h3 class="banner">Rechercher l'origine d'une pièce</h3>
         <div class="form align w5050">
@@ -102,35 +130,7 @@
             </select>
         </div>
         <div class="form center">
-            <input class="btn" type="submit" value="Rechercher">
-        </div>
-    </form>
-    
-    <form action="/searchGame" method="POST" class="form contact" id="searchGame">
-        <h3 class="banner">Rechercher un jeu</h3>
-        <div class="form align w5050">
-            <label for="gameName">Nom</label>
-            <input type="text" name="gameName" id="gameName">
-            <label for="category">Catégorie</label>
-            <select name="category" id="category">
-                <option disabled selected hidden>--- Choisir ---</option>
-                {% for cat in categories %}
-                    <option value="{{cat.id}}">{{cat.name|capitalize}}</option>
-                {% endfor %}
-            </select>
-            <label for="author">Auteur</label>
-            <select name="author" id="author">
-                <option disabled selected hidden>--- Choisir ---</option>
-                {% for author in authors %}
-                    <option value="{{author.id}}">{{author}}</option>
-                {% endfor %}
-            </select>
-            <label for="players">Nombre de joueurs</label>
-            <input type="number" min="0" max="16" name="players" id="players"></input>
-            
-        </div>
-        <div class="form center">
-            <input class="btn" type="submit" value="Rechercher">
+            <input class="btn main" type="submit" value="Rechercher">
         </div>
     </form>
 </div>
