--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <form method="post" class="form contact">
     {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        <div class="alert alert-danger">Les identifiants ne sont pas les bons !</div>
     {% endif %}
 
     {% if app.user %}
@@ -37,7 +37,7 @@
     #}
 
     <div class="form center">
-        <button class="btn contact" type="submit">connexion</button>
+        <button class="btn main" type="submit">connexion</button>
     </div>
 </form>
 {% endblock %}
