--- a/templates/home/cgu.html.twig
+++ b/templates/home/cgu.html.twig
@@ -21,18 +21,25 @@
     <strong>PieceFinder</strong>.fr se réserve le droit de modifier unilatéralement et à tout moment le contenu des
     présentes CGU.
     </p>
-    <h3>ARTICLE 1 : Les mentions légales</h3>
+    <h3 id="article1">ARTICLE 1 : Les mentions légales</h3>
     <p>L’édition et la direction de la publication du site <strong>PieceFinder.fr</strong> est assurée par Alexis BERTHIAUX,
     domicilié 9, rue du marais Kageneck 67000 STRASBOURG.<br>
     Le numéro de téléphone est : 06.43.20.07.29<br>
-    L'adresse e-mail est : <mailto:><strong>admin@PieceFinder.fr.</strong></mailto:></p>
-    <p>L'hébergeur du site <strong>PieceFinder</strong>.fr est la société LocalHost, dont le siège social est situé au SARL,
+    L'adresse e-mail est : <a href="mailto:admin@PieceFinder.fr"><strong>admin@PieceFinder.fr.</strong></a></p>
+    <p>L'hébergeur du site <strong>PieceFinder.fr</strong> est la société LocalHost, dont le siège social est situé au SARL,
     avec le numéro de téléphone : 0123456789.
     </p>
-    <h3>ARTICLE 2 : Accès au site</h3>
+    <h3 id="article2">ARTICLE 2 : Accès au site</h3>
     <p>Le site <strong>PieceFinder.fr</strong> permet à l'Utilisateur un accès gratuit aux services suivants :</p>
-        <ul>
+        <ul class="cgu">
             <li>
+                La réalisation d'une collection de jeux personnelle
+            </li>
+            <li>
+                La possibilité de noter et commenter les jeux du site
+            </li>
+            <li>
+                La modification de ses propres données
             </li>
         </ul>
     
@@ -53,21 +60,22 @@
     la responsabilité de <strong>PieceFinder.fr</strong>. Dans ces cas, l’Utilisateur accepte ainsi ne pas tenir rigueur à
     l’éditeur de toute interruption ou suspension de service, même sans préavis.</p>
     <p>L'Utilisateur a la possibilité de contacter le site par messagerie électronique à l’adresse email de
-    l’éditeur communiqué à l’ARTICLE 1.</p>
-    <h3>ARTICLE 3 : Collecte des données</h3>
+    l’éditeur communiqué à <a href="#article1">l’article 1</a>.</p>
+
+    <h3 id="article3">ARTICLE 3 : Collecte des données</h3>
     <p>Le site assure à l'Utilisateur une collecte et un traitement d'informations personnelles dans le respect
     de la vie privée conformément à la loi n°78-17 du 6 janvier 1978 relative à l'informatique, aux fichiers
-    et aux libertés. Le site est déclaré à la CNIL sous le numéro 25878463518576432.</p>
+    et aux libertés. {#Le site est déclaré à la CNIL sous le numéro 25878463518576432.#}</p>
     <p>En vertu de la loi Informatique et Libertés, en date du 6 janvier 1978, l'Utilisateur dispose d'un droit
     d'accès, de rectification, de suppression et d'opposition de ses données personnelles. L'Utilisateur
     exerce ce droit :</p>
-        <ul>
-            <li> par mail à l'adresse email admin@<strong>PieceFinder.fr</strong></li>
+        <ul class="cgu" class="cgu">
+            <li> par mail à l'adresse email <strong><a href="mailto:admin@PieceFinder.fr">admin@PieceFinder.fr</a></strong></li>
             <li> via un formulaire de contact ;</li>
             <li> via son espace personnel ;</li>
         </ul>
     
-    <h3>ARTICLE 4 : Propriété intellectuelle</h3>
+    <h3 id="article4">ARTICLE 4 : Propriété intellectuelle</h3>
     <p>Les marques, logos, signes ainsi que tous les contenus du site (textes, images, son…) font l'objet
     d'une protection par le Code de la propriété intellectuelle et plus particulièrement par le droit d'auteur.</p>
     <p>La marque <strong>PieceFinder</strong> est une marque déposée par Alexis BERTHIAUX.Toute représentation et/ou
@@ -82,7 +90,7 @@
     <p>Il est rappelé conformément à l’article L122-5 du Code de propriété intellectuelle que l’Utilisateur qui
     reproduit, copie ou publie le contenu protégé doit citer l’auteur et sa source.
     </p>
-    <h3>ARTICLE 5 : Responsabilité</h3>
+    <h3 id="article5">ARTICLE 5 : Responsabilité</h3>
     <p>Les sources des informations diffusées sur le site <strong>PieceFinder.fr</strong> sont réputées fiables mais le site ne
     garantit pas qu’il soit exempt de défauts, d’erreurs ou d’omissions.</p>
     <p>Les informations communiquées sont présentées à titre indicatif et général sans valeur contractuelle.
@@ -98,11 +106,11 @@
     téléchargement provenant de ce site.</p>
     <p>La responsabilité du site ne peut être engagée en cas de force majeure ou du fait imprévisible et
     insurmontable d'un tiers.</p>
-    <h3>ARTICLE 6 : Liens hypertextes</h3>
+    <h3 id="article6">ARTICLE 6 : Liens hypertextes</h3>
     <p>Des liens hypertextes peuvent être présents sur le site. L’Utilisateur est informé qu’en cliquant sur ces
     liens, il sortira du site <strong>PieceFinder.fr</strong>. Ce dernier n’a pas de contrôle sur les pages web sur lesquelles
     aboutissent ces liens et ne saurait, en aucun cas, être responsable de leur contenu.</p>
-    <h3>ARTICLE 7 : Cookies</h3>
+    <h3 id="article7">ARTICLE 7 : Cookies</h3>
     <p>L’Utilisateur est informé que lors de ses visites sur le site, un cookie peut s’installer automatiquement
     sur son logiciel de navigation.</p>
     <p>Les cookies sont de petits fichiers stockés temporairement sur le disque dur de l’ordinateur de
@@ -118,10 +126,11 @@
     <p>L’Utilisateur pourra désactiver ces cookies par l’intermédiaire des paramètres figurant au sein de son
     logiciel de navigation.
     </p>
-    <h3>ARTICLE 8 : Publication par l’Utilisateur</h3>
+    <h3 id="article8">ARTICLE 8 : Publication par l’Utilisateur</h3>
     <p>Le site permet aux membres de publier les contenus suivants :</p>
-        <ul>
-            <li>commentaires.</li>
+        <ul class="cgu">
+            <li>Commentaires</li>
+            <li>Descriptif personnel</li>
         </ul>
     <p>Dans ses publications, le membre s’engage à respecter les règles de la Netiquette (règles de bonne
     conduite de l’internet) et les règles de droit en vigueur.</p>
@@ -141,11 +150,11 @@
     <p>Le contenu de l'Utilisateur peut être à tout moment et pour n'importe quelle raison supprimé ou modifié
     par le site, sans préavis.
     </p>
-    <h3>ARTICLE 9 : Droit applicable et juridiction compétente</h3>
+    <h3 id="article9">ARTICLE 9 : Droit applicable et juridiction compétente</h3>
     <p>La législation française s'applique au présent contrat. En cas d'absence de résolution amiable d'un
     litige né entre les parties, les tribunaux français seront seuls compétents pour en connaître.</p>
     <p>Pour toute question relative à l’application des présentes CGU, vous pouvez joindre l’éditeur aux
-    coordonnées inscrites à l’ARTICLE 1.</p>
+    coordonnées inscrites à <a href="#article1">l’article 1</a>.</p>
     <p></p>
     <p>CGU réalisées sur <a href="http://legalplace.fr/">http://legalplace.fr/</a></p>
 </section>
