--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,6 +18,8 @@
 =========================================
     Recherche
 =========================================
+    Page d'erreur
+=========================================
     Footer
 =========================================
     Média query pour l'adaptation aux supports
@@ -583,6 +585,44 @@ label.required::after{
     z-index: 4;
     margin: 0 -0.15em;
 }
+#jeu{
+    margin: 1em auto;
+    max-width: 330px;
+    height: 330px;
+    border: 1px solid var(--main-xxdark);
+    border-radius: 5px;
+    background-color: var(--main-dark);
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+.cell{
+    width: 100px;
+    height: 100px;
+    border: 1px solid var(--main-xxdark);
+    border-radius: 5px;
+    background-color: var(--main-xxclear);
+    cursor: pointer;
+    font-size: 5em;
+    justify-self: center;
+    align-self: center;
+    transition: background-color 0.6s;
+    text-align: center;
+}
+.cell:hover{
+    background-color: var(--main-xclear);
+}
+.affichage{
+    margin: 1em auto;
+    font-size: 2em;
+}
+.cochee{
+    background-color: var(--main-clear);
+    color: var(--main-xdark);
+    cursor: not-allowed;
+}
+.cochee:hover{
+    background-color: var(--main-clear);
+}
 /*=========================================
     Footer
 =========================================*/
@@ -621,6 +661,9 @@ footer p{
 @media only screen and (max-width: 650px) {
     .desktop{
         display: none;
+    }
+    .homePannel.box{
+        width: 100%;
     }
     i.mobile{
         display: initial;
@@ -675,7 +718,7 @@ footer p{
     }
     
 }
-@media only screen and (max-width: 430px) {
+@media only screen and (max-width: 440px) {
     .itemCard figure{
         width: 50%;
     }
@@ -692,6 +735,24 @@ footer p{
     }
     .gallery.piece{
         display: block;
+    }
+    .homePannel{
+        flex-direction: column;
+        border-radius: 10px 10px 0 0;
+        border-top: none;
+        border-left: 1px solid var(--main-xxdark);
+    }
+    .homeChoice, .homeChoice.active{
+        width: 100%;
+        border-top: 2px solid var(--main-xxdark);
+        border-left: none;
+        border-radius: 10px 10px 0 0;
+    }
+    .homeChoice.active::after{
+        width: 100%;
+        height: 10px;
+        bottom: -10px;
+        right:0;
     }
     
 }
