--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,6 +25,9 @@
                             <a href="/everyGames"><span class="desktop">Jeux</span><i class="fa-solid fa-chess-rook mobile"></i></a>
                             <a href="/search"><span class="desktop">Rechercher</span><i class="mobile fa-solid fa-magnifying-glass"></i></a>
                             {% if app.user %}
+                                {% if "ROLE_ADMIN" in app.user.roles %}
+                                    <a href="/admin"><span class="desktop">Admin</span><i class="fa-solid fa-cog mobile"></i></a>
+                                {% endif %}
                                 <a href="/user/details/{{app.user.id}}"><span class="desktop">Mon Profil</span><i class="mobile fa-solid fa-id-card-clip"></i></a>
                                 <a href="/app_logout"><span class="desktop">Déconnexion</span><i class="mobile fa-solid fa-right-from-bracket"></i></a>
                             {% else %}
