--- a/templates/game/details.html.twig
+++ b/templates/game/details.html.twig
@@ -66,13 +66,13 @@
                 if( collbtn.classList.contains("add") ){
                     url = "/addown/{{game.id}}"
                     action = modifyBtn("added")
-                    collbtn.classList.remove("add")
+                    collbtn.classList.remove("add", "main")
                     collbtn.classList.add("remove")
                 }else if( collbtn.classList.contains("remove") ){
                     url = "/remove/{{game.id}}"
                     action = modifyBtn("removed")
                     collbtn.classList.remove("remove")
-                    collbtn.classList.add("add")
+                    collbtn.classList.add("add", "main")
                 }
                 $.ajax({
                     url: url,
@@ -119,7 +119,10 @@
                             </span>
                         {% endfor %}
                         </p>
-                    <p>Pour {{game.playerMin}} à {{game.playerMax}} joueurs</p>
+                    <p>Pour {{game.playerMin}} 
+                        {% if game.playerMin != game.playerMax%}
+                            à {{game.playerMax}}
+                        {% endif %} joueurs</p>
                     <p>Durée : {{game.duration}} minutes environ</p>
                 </div>
                 <div>
@@ -148,7 +151,7 @@
                                 </div>
                             {% else %}
                                 <div class="inCollect">
-                                    <button class="btn add" id="collectBtn">
+                                    <button class="btn add main" id="collectBtn">
                                         Ajouter à ma collection
                                     </button>
                                 </div>
@@ -272,8 +275,7 @@
                 <ul>
                     {% for content in game.gameContents
                     |filter(c => c.componentType.type == "carte")
-                    |sort( (a,b) => b.color <=> a.color )
-                    |sort( (a,b) => b.component <=> a.component )  %}
+                    |sort( (a,b) => b.color <=> a.color )  %}
                         <li class="pieceDescription">
                             <span class="imgHover">
                                 <img src={{asset(content.picture)}} alt={{content.componentType}}>
